# InterCLIP-MEP

./: .gitignore  .python-version  LICENSE.md  README.md  pyproject.toml
configs/: best.yaml
configs/interactive-ways/: t2v.yaml  twoway.yaml  v2t.yaml  w-o-inter.yaml
configs/mmsd/clip-base/: t2v.yaml  twoway.yaml  v2t.yaml  w-o-inter.yaml
configs/mmsd/clip-roberta/: t2v.yaml  twoway.yaml  v2t.yaml  w-o-inter.yaml
configs/mmsd2.0/clip-base/: t2v.yaml  twoway.yaml  v2t.yaml  w-o-inter.yaml
configs/mmsd2.0/clip-roberta/: t2v.yaml  twoway.yaml  v2t.yaml  w-o-inter.yaml
mmsd/: __main__.py  dataset.py  interactive_clip.py  interactive_roberta.py  lit_model.py  model.py  predictor.py
scripts/: convert_mmsd2_to_imagefolder_data.py  convert_mmsd2_to_imagefoler_data.py  grid_search_memo_size.py  openclip2interclip.py  run_ablation_study.sh  run_hyperparam_study.sh  run_lora_analysis.sh  run_lora_module_study.sh  run_main_results-clip-base-MMSD.sh  run_main_results-clip-base-MMSD2.0.sh  run_main_results-clip-roberta-MMSD.sh  run_main_results-clip-roberta-MMSD2.0.sh  run_main_results.sh
tests/: test_dataset.py
