[tool.poetry]
name = "mmsd"
version = "0.1.0"
description = ""
authors = ["Junjie Chen <jorji.chen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.2.2"
numpy = "^1.26.4"
lightning = "^2.2.2"
transformers = "^4.40.0"
diffusers = "^0.27.2"
datasets = "^2.19.0"
einops = "^0.7.0"
peft = "^0.10.0"
jsonargparse = {extras = ["signatures"], version = "^4.28.0"}
torchmetrics = {extras = ["visual"], version = "^1.3.2"}
tensorboard = "^2.16.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
pytest = "^8.1.1"
pyzmq = "26.0.0"
ipykernel = "^6.29.4"
ipywidgets = "^8.1.2"
isort = "^5.13.2"
jsonlines = "^4.0.0"
scienceplots = "^2.1.1"
grad-cam = "^1.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.poetry.scripts]
mmsd = "mmsd.__main__:cli_main"
